--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,3 @@
-:root {
-    --main-color-2021: #E09108;
-    --main-color-2022: #9A00C4;
-    --main-color-2023: #A60303;
-
-}
-
 body {
     position: relative;
 }
@@ -87,7 +80,7 @@ section h3 {
 }
 
 .description h3 span {
-    color: var(--main-color-2021);
+    color: var(--year-2021);
 }
 
 .description p {
@@ -99,7 +92,7 @@ section h3 {
 .btn-more,
 .btn-3d_models {
     padding: 10px;
-    border: solid 1px var(--main-color-2021);
+    border: solid 1px var(--year-2021);
     border-radius: 15px;
     color: #ffffff;
     text-decoration: none;
@@ -108,7 +101,7 @@ section h3 {
 
 .btn-more:hover,
 .btn-3d_models:hover {
-    background-color: var(--main-color-2021);
+    background-color: var(--year-2021);
     color: #ffffff;
 }
 
@@ -119,8 +112,8 @@ section h3 {
     align-items: center;
     justify-content: center;
     gap: 15px;
-    height: 200px;
-    width: 200px;
+    height: 300px;
+    width: 300px;
     padding: 15px;
     overflow: hidden;
 }
@@ -128,7 +121,7 @@ section h3 {
 .projects-examples-list img {
     position: absolute;
     left: calc(50%-100px);
-    max-height: 200px;
+    max-height: 300px;
     border-radius: 10px;
     opacity: 0;
     animation: displayProjects 10s infinite;
@@ -187,7 +180,7 @@ section h3 {
     padding: 10px;
     width: 150px;
     height: auto;
-    border: solid 1px var(--main-color-2021);
+    border: solid 1px var(--year-2021);
     border-radius: 8px;
     background-color: var(--main-color-background);
     text-decoration: none;
@@ -197,7 +190,7 @@ section h3 {
 }
 
 .btn-projects:hover {
-    background-color: var(--main-color-2021);
+    background-color: var(--year-2021);
     color: #ffffff;
 }
 
@@ -273,6 +266,19 @@ section h3 {
 
     .background-image img {
         width: 700px;
+    }
+
+    .btn-projects {
+        opacity: 1;
+        background-color: var(--year-2021);
+    }
+
+    .btn-more {
+        background-color: var(--year-2021)
+    }
+
+    .btn-3d_models {
+        background-color: var(--year-2021)
     }
 
 }
